# task-tracker

./: .env_prod  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b1330806c36_create_tables.py  e560d354bdef_add_init_data.py  eeb66860687c_add_more_indexes.py
app/: main.py
app/api/v1/: analytics.py  auth.py  task.py  user.py
app/core/: settings.py
app/db/: models.py
app/db/models/: role.py  status.py  task.py  user.py
app/schemes/: auth.py  task.py  user.py
app/security/: auth.py  errors.py
app/services/: analytics.py  main_service.py  mappings.py  task.py  user.py
tests/: conftest.py
tests/test_api/: test_analytics.py  test_auth.py  test_task.py  test_user.py
tests/test_service/: test_task_service.py  test_user_service.py
