[project]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Yagunov Denis",email = "spb.jagunov.denis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
fastapi = "^0.128.0"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.39"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 79

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
