[project]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Yagunov Denis",email = "spb.jagunov.denis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
fastapi = "^0.128.0"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.39"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.3.0"
alembic = "^1.18.1"
pandas = "^3.0.0"
plotly = "^6.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "faker (>=40.1.2,<41.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
